--- a/UniFiler10/App.xaml
+++ b/UniFiler10/App.xaml
@@ -14,12 +14,15 @@
                     Required by Visual Studio project and item templates
                  -->
                 <ResourceDictionary Source="Styles/Styles.xaml"/>
+                <ResourceDictionary Source="Controlz/LayoutTransformer.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <conv:BooleanToCollapsedConverter x:Key="BooleanToCollapsedConverter"/>
             <conv:BooleanToVisibleConverter x:Key="BooleanToVisibleConverter"/>
             <conv:TrueToFalseConverter x:Key="TrueToFalseConverter"/>
             <conv:IsNotNullToTrue x:Key="IsNotNullToTrue"/>
             <conv:IsNotNullToVisible x:Key="IsNotNullToVisible"/>
+            <conv:TextEmptyToCollapsedConverter x:Key="TextEmptyToCollapsedConverter"/>
+            <conv:TextEmptyToVisibleConverter x:Key="TextEmptyToVisibleConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
