--- a/UniFiler10/Styles/Styles.xaml
+++ b/UniFiler10/Styles/Styles.xaml
@@ -394,6 +394,7 @@
     <x:Double x:Key="CompactPaneLength">64</x:Double>
     <x:Double x:Key="CompactPaneHalfLength">32</x:Double>
     <x:Double x:Key="CompactPaneThirdOfLength">20</x:Double>
+    <x:Double x:Key="OpenPaneLength">160</x:Double>
     <x:Int32 x:Key="MaxDbNameLength">100</x:Int32>
     <x:Int32 x:Key="MaxFolderNameLength">200</x:Int32>
     <x:Int32 x:Key="MaxFolderDescrLength">2000</x:Int32>
