--- a/UniFiler10/Views/MetaBriefcaseView.xaml
+++ b/UniFiler10/Views/MetaBriefcaseView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="UniFiler10.Views.MetaCategoriesView"
+    x:Class="UniFiler10.Views.MetaBriefcaseView"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -12,7 +12,7 @@
     d:DesignWidth="400"
     IsEnabled="{Binding IsEnabled, Mode=OneWay}">
 
-    <Grid>
+    <Grid Background="AntiqueWhite">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
