--- a/UniFiler10/Views/BriefcasePage.xaml
+++ b/UniFiler10/Views/BriefcasePage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="UniFiler10.Views.BriefcaseView"
+    x:Class="UniFiler10.Views.BriefcasePage"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
