--- a/UniFiler10/Views/DocumentsView.xaml
+++ b/UniFiler10/Views/DocumentsView.xaml
@@ -17,7 +17,27 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <AppBarButton Icon="Add" Click="OnAdd_Click"/>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+                <!--<ColumnDefinition Width="1*"/>-->
+                <!--<ColumnDefinition Width="1*"/>-->
+            </Grid.ColumnDefinitions>
+            <!--<AppBarButton Grid.Column="0"
+                Icon="Add" 
+                Click="OnAdd_Click"/>-->
+            <AppBarButton Grid.Column="0"
+                Icon="Camera"
+                IsEnabled="{Binding ElementName=me, Path=VM.RuntimeData.IsCameraAvailable}"
+                Click="OnShoot_Click"/>
+            <!--<AppBarButton Grid.Column="1"
+                Icon="Microphone"
+                Click="OnRecordSound_Click"/>-->
+            <AppBarButton Grid.Column="1"
+                Icon="OpenFile"
+                Click="OnOpenFile_Click"/>
+        </Grid>
 
         <utilz:TolerantListView x:Name="LV"
             Grid.Row="1"
