--- a/UniFiler10/Views/AudioRecorderView.xaml
+++ b/UniFiler10/Views/AudioRecorderView.xaml
@@ -1,12 +1,12 @@
 ﻿<UserControl
-    x:Class="UniFiler10.Views.CameraView"
+    x:Class="UniFiler10.Views.AudioRecorderView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Loaded="OnLoaded"
-    Unloaded="OnUnloaded"
+    Unloaded="OnUnloaded"    
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -14,12 +14,13 @@
     <UserControl.Resources>
         <SolidColorBrush x:Key="TranslucentBlackBrush" Color="Black" Opacity="0.3"/>
     </UserControl.Resources>
-
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-        <!--Camera preview-->
-        <CaptureElement Name="PreviewControl" Stretch="Uniform"/>
-
+        <!--Audio preview LOLLO TODO check if we can use this -->
+        <!--<CaptureElement Name="PreviewControl" Stretch="Uniform"/>-->
+        <Border Width="400" Height="400" Background="Gold">
+            <TextBlock Text="Some animation here" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </Border>
         <!-- Capture + Record buttons -->
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center">
             <StackPanel.Resources>
@@ -34,22 +35,13 @@
                 </Style>
             </StackPanel.Resources>
 
-            <Button Name="PhotoButton" Tapped="OnPhotoButton_Tapped" IsEnabled="False">
-                <Viewbox MaxHeight="40" MaxWidth="40">
-                    <SymbolIcon Symbol="Camera"/>
-                </Viewbox>
-            </Button>
-
-            <Button Name="VideoButton" Tapped="OnVideoButton_Tapped" IsEnabled="False">
-                <Grid>
-                    <Ellipse x:Name="StartRecordingIcon" Fill="Red" Width="20" Height="20"/>
-                    <Rectangle x:Name="StopRecordingIcon" Fill="White" Width="20" Height="20" Visibility="Collapsed"/>
-                </Grid>
-            </Button>
-
             <Button Tapped="OnBackButton_Tapped">
-                <Viewbox MaxHeight="40" MaxWidth="40">
-                    <SymbolIcon Symbol="Back"/>
+                <Viewbox MaxHeight="60" MaxWidth="60">
+                    <StackPanel Orientation="Vertical">
+                        <SymbolIcon Symbol="Back"/>
+                        <TextBlock x:Uid="StopRecording"
+                            HorizontalAlignment="Center"/>
+                    </StackPanel>
                 </Viewbox>
             </Button>
         </StackPanel>
