--- a/UniFiler10/Views/AudioRecorderView.xaml
+++ b/UniFiler10/Views/AudioRecorderView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl
+﻿<ctl:OpenableObservableControl
     x:Class="UniFiler10.Views.AudioRecorderView"
+    x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+    xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Loaded="OnLoaded"
-    Unloaded="OnUnloaded"    
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -45,5 +45,9 @@
                 </Viewbox>
             </Button>
         </StackPanel>
+
+        <Border Background="Gold" VerticalAlignment="Bottom">
+            <TextBlock Text="{Binding ElementName=me, Path=LastMessage}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </Border>
     </Grid>
-</UserControl>
+</ctl:OpenableObservableControl>
