--- a/UniFiler10/Views/BinderView.xaml
+++ b/UniFiler10/Views/BinderView.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl
+﻿<ctl:OpenableObservableControl
     x:Class="UniFiler10.Views.BinderView"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+    xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utilz="using:Utilz"
@@ -139,17 +140,17 @@
         </SplitView>
 
         <Popup
-            IsOpen="{Binding ElementName=me, Path=VM.IsCameraOverlayOpen, Mode=OneWay}">
+            IsOpen="{Binding ElementName=me, Path=VM.Media.IsCameraOverlayOpen, Mode=OneWay}">
             <local:CameraView 
                 VM="{Binding ElementName=me, Path=VM, Mode=OneWay}"
                 DataContext="{Binding CurrentFolder, Mode=OneWay}"/>
         </Popup>
         
         <Popup
-            IsOpen="{Binding ElementName=me, Path=VM.IsAudioRecorderOverlayOpen, Mode=OneWay}">
+            IsOpen="{Binding ElementName=me, Path=VM.Media.IsAudioRecorderOverlayOpen, Mode=OneWay}">
             <local:AudioRecorderView
                 VM="{Binding ElementName=me, Path=VM, Mode=OneWay}"
                 DataContext="{Binding CurrentFolder, Mode=OneWay}"/>
         </Popup>
     </Grid>
-</UserControl>
+</ctl:OpenableObservableControl>
